Bug 79269 - ODF import - Unchecking 'same content on first page' footer option doesnt work
Summary: ODF import - Unchecking 'same content on first page' footer option doesnt work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.6.2 release
Hardware: All All
: highest blocker
Assignee: Michael Stahl
URL:
Whiteboard: odf target:4.4.0 target:4.3.3
Keywords: dataLoss, filter:odt
: 78152 (view as bug list)
Depends on:
Blocks: Writer-Header-Footer mab4.2
  Show dependency treegraph
 
Reported: 2014-05-26 19:35 UTC by Alex
Modified: 2017-05-19 19:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2014-05-26 19:35:00 UTC
I filed this bug a while ago, but at that time it suddenly became not reproducible on my PC, and the person who answered me could not reproduce it either.

Now I got it again. I am 100% _sure_ that footers are _not_ saved.

It stopped working again right after I updated LibreOffice from 4.2.x to 4.2.4.2. 

I do not remember exact version number of previous version. I could possibly find out version of previously installed LibreOffice from my previous bug report, but sadly I could not find it. Looks like my previous bug report got deleted.

Footers are not saved in my document. I uncheck "same content for first page" in footer format dialog, then I add page number filed to the footer of second page, then I save document, then I close document, then I open document, then I see no footers at all. "same content for first page" option gets checked again.

I already tried multiple times, it always happens. I can post my document if it helps.

I now think that this issue is related to updating. I installed new version of LibreOffice using windows installer from official web site. I now remember that last time when saving footers didn't work for me before it also happened right after I updated LibreOffice. In fact that time I did not update LibreOffice but rather uninstalled OpenOffice and then installed LibreOffice, then saving footers stopped working, but later is started working again. 

But this time it does not work at all. I don't remember what exactly I did previous time to make it work. It seemed completely random. But this time I tried already like 8 times, and... well.... footers are _not_ saved  :/

Thanks for your attention.
Comment 1 Yousuf Philips (jay) (retired) 2014-05-27 00:53:06 UTC
Confirmed on Linux Mint with 4.0.6, 4.2.4 and 4.3 beta 1. LibO 3.6 does have the footer option.

Here are some simple steps.

1. Open writer
2. Make a page break so you have 2 pages
3. Menu > Format > Page > Footer - uncheck 'same content on first page'
4. In footer of first page type 'WhatsApp'
5. In footer of second page insert page number
6. Save file as odt
7. Reopen file and 'same content on first page' has been rechecked resulting in 'WhatsApp' appearing on the second page.

I tested saving the file as .doc and .docx and it opened correctly. Saving it as .rtf resulted in it opening with only a single page and 'WhatsApp' was gone and only the page number was retained. I tested the saved .odt in calligra and it had the page number on both pages.

Your previous bug report is bug 78152. :)

I've set this to higest-blocker as data is being lost in the footnote.
Comment 2 Yousuf Philips (jay) (retired) 2014-05-27 00:53:48 UTC
*** Bug 78152 has been marked as a duplicate of this bug. ***
Comment 3 Yousuf Philips (jay) (retired) 2014-05-27 07:17:02 UTC
Just confirmed that unchecking 'same content on first page' in the header is fine in 4.3 beta but not in 4.2. You can see this if you use attachment 86189 [details] and save it as a docx and then reopen it, then the headers on page 2 and 3 are gone.
Comment 4 nood0131 2014-08-20 23:06:55 UTC
I also experience this problem on Debian testing (jessie).
Version: 4.3.0.4
Build-ID: 430m0(Build:4)
Comment 5 Michael Stahl 2014-09-29 22:05:02 UTC
the problem actually happens on import

fixed on master
Comment 6 Commit Notification 2014-09-29 22:06:10 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f21f932081471b2a5eda820fa1a194fbf3ab85c

fdo#79269: fix ODF import of style:footer-first



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-09-29 22:06:23 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ea9d4d7c5db4fa85be2e14d29fe631d58b9e60f

fdo#79269: sw: more cleanup of SwXStyle's FirstIsShared property



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-09-30 16:15:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=88b671d3d879fb04fdd282f30264e6c6bfa019ee

fdo#79269: add a unit test for first-page header too



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-10-01 07:27:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=902de8a1cbdb86c1eb1a05c8307b109fd75f493c&h=libreoffice-4-3

fdo#79269: fix ODF import of style:footer-first


It will be available in LibreOffice 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Robinson Tryon (qubit) 2015-12-17 05:52:54 UTC Comment hidden (obsolete)