fdo#79269: fix ODF import of style:footer-first

The implementation of SwXStyle's FirstIsShared property is busted, and
that causes xmloff to write the footer-first content into the master
footer.

Change-Id: I520a4929d9d7313da65bcdcf4094f8244382377d